<resources>
    <string name="app_name">Aston_intensive_3</string>
    <string name="contact_id">Id: %s</string>
    <string name="contact_phone">Phone: %s</string>
    <string name="add_button">+ Add contact</string>
    <string name="cancel_button">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone">Phone</string>
    <string name="edit_button">Edit</string>
    <string name="ic_edit_description">Chose contact for delete</string>
</resources>
